--- a/Lab 3/Lab 3.vcxproj
+++ b/Lab 3/Lab 3.vcxproj
@@ -151,7 +151,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Task1.h" />
+    <ClInclude Include="Task2.h" />
+    <ClInclude Include="Task3.h" />
+    <ClInclude Include="Task4.h" />
+    <ClInclude Include="Task5.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Lab 3.cpp" />
